# ros2_mcp

./: .env  .gitignore  Dockerfile  README.md  compose.yaml
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
src/ros2_mcp/: package.xml  setup.cfg  setup.py
src/ros2_mcp/ros2_mcp/: ros2_mcp_server.py
