<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_mcp</name>
  <version>0.0.0</version>
  <description>An MCP for ROS2</description>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>cv_bridge</depend>
  <depend>python_mcp</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
